# Computer-Science-Project

./: .gitignore  CMakeLists.txt  Codility.txt  Computer Science.sln
City Travel/: City Travel.cpp  City Travel.vcxproj  City Travel.vcxproj.filters
src/: main.cpp
src/CityTravel/: CMakeLists.txt  City Travel.cpp  City Travel.h
src/Codility/: CMakeLists.txt  Codility.cpp  Codility.h
